src/snapshots/palinter__load_folder_tree__tests__ignore_folders.snap
---
source: src/load_folder_tree.rs
expression: folder
---
Folder {
    name: "ignore_folder",
    childs: [
        FileChild(
            File {
                basename: "not_ignore",
                name_with_ext: "not_ignore.ts",
                content: "",
                extension: Some(
                    "ts",
                ),
            },
        ),
    ],
}
