src/snapshots/palinter__load_folder_tree__tests__ignore_unconfigured_folder.snap
---
source: src/load_folder_tree.rs
expression: folder
---
Folder {
    name: "analyze_file_contents",
    childs: [
        FileChild(
            File {
                basename: "test",
                name_with_ext: "test.md",
                content: "",
                extension: Some(
                    "md",
                ),
            },
        ),
    ],
}
